--- a/index.html
+++ b/index.html
@@ -13,65 +13,67 @@
 
       </div>
     </header>
+    <main>
     <section class="profile">
-      <img src="images/zhak-iv_kusto.png" alt="" class="profile__avatar">
+      <img src="images/zhak-iv_kusto.png" alt="портрет человека" class="profile__avatar">
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
-        <button class="profile__edit-button"></button>
+        <button type="button" class="profile__edit-button"></button>
         <p class="profile__subtitle">Исследователь океана</p>
       </div>
-      <button class="profile__button"></button>
+      <button type="button" class="profile__button"></button>
     </section>
     <section class="elements">
       <div class="element"> 
         <img src="images/karachaevsk.jpg" alt="иллюстрация пейзажа" class="element__image">
         <div class="element__info">
           <h4 class="element__title">Карачаевск</h4>
-          <button class="element__button-like"></button>
+          <button type="button" class="element__button-like"></button>
         </div>
       </div>
       <div class="element">
         <img src="images/gora_elbrus.jpg" alt="иллюстрация пейзажа" class="element__image">
         <div class="element__info">
           <h4 class="element__title">Гора Эльбрус</h4>
-          <button class="element__button-like"></button>
+          <button type="button" class="element__button-like"></button>
         </div>
       </div>
       <div class="element"> 
         <img src="images/dombai.jpg" alt="иллюстрация пейзажа" class="element__image">
         <div class="element__info">
           <h4 class="element__title">Домбай</h4>
-          <button class="element__button-like"></button>
+          <button type="button" class="element__button-like"></button>
         </div>
       </div>
       <div class="element"> 
         <img src="images/gora_elbrus.jpg" alt="иллюстрация пейзажа" class="element__image">
         <div class="element__info">
           <h4 class="element__title">Гора Эльбрус</h4>
-          <button class="element__button-like"></button>
+          <button type="button" class="element__button-like"></button>
         </div>
       </div>
       <div class="element"> 
         <img src="images/dombai.jpg" alt="иллюстрация пейзажа" class="element__image">
         <div class="element__info">
           <h4 class="element__title">Домбай</h4>
-          <button class="element__button-like"></button>
+          <button type="button" class="element__button-like"></button>
         </div>
       </div>
       <div class="element"> 
         <img src="images/karachaevsk.jpg" alt="иллюстрация пейзажа" class="element__image">
         <div class="element__info">
           <h4 class="element__title">Карачаево-Черкесия</h4>
-          <button class="element__button-like"></button>
+          <button type="button" class="element__button-like"></button>
         </div>
       </div>
     </section>
-    <section class="footer">
+    </main>
+    <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
-    </section>
+    </footer>
     <section class="popup">
       <div class="popup__container">
-        <button class="popup__close-button"></button>
+        <button type="button" class="popup__close-button"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <form class="popup__form">
           <input type="text" name="name" value="Жак-Ив Кусто" class="popup__form-text popup__form-text_type_name">
