--- a/index.html
+++ b/index.html
@@ -24,48 +24,7 @@
       <button type="button" class="profile__button"></button>
     </section>
     <section class="elements">
-      <div class="element"> 
-        <img src="images/karachaevsk.jpg" alt="иллюстрация пейзажа" class="element__image">
-        <div class="element__info">
-          <h4 class="element__title">Карачаевск</h4>
-          <button type="button" class="element__button-like"></button>
-        </div>
-      </div>
-      <div class="element">
-        <img src="images/gora_elbrus.jpg" alt="иллюстрация пейзажа" class="element__image">
-        <div class="element__info">
-          <h4 class="element__title">Гора Эльбрус</h4>
-          <button type="button" class="element__button-like"></button>
-        </div>
-      </div>
-      <div class="element"> 
-        <img src="images/dombai.jpg" alt="иллюстрация пейзажа" class="element__image">
-        <div class="element__info">
-          <h4 class="element__title">Домбай</h4>
-          <button type="button" class="element__button-like"></button>
-        </div>
-      </div>
-      <div class="element"> 
-        <img src="images/gora_elbrus.jpg" alt="иллюстрация пейзажа" class="element__image">
-        <div class="element__info">
-          <h4 class="element__title">Гора Эльбрус</h4>
-          <button type="button" class="element__button-like"></button>
-        </div>
-      </div>
-      <div class="element"> 
-        <img src="images/dombai.jpg" alt="иллюстрация пейзажа" class="element__image">
-        <div class="element__info">
-          <h4 class="element__title">Домбай</h4>
-          <button type="button" class="element__button-like"></button>
-        </div>
-      </div>
-      <div class="element"> 
-        <img src="images/karachaevsk.jpg" alt="иллюстрация пейзажа" class="element__image">
-        <div class="element__info">
-          <h4 class="element__title">Карачаево-Черкесия</h4>
-          <button type="button" class="element__button-like"></button>
-        </div>
-      </div>
+      
     </section>
     </main>
     <footer class="footer">
@@ -82,7 +41,37 @@
         </form>
       </div>
     </section>
+    <section class="popup popup_type_add-card">
+      <div class="popup__container">
+        <button type="button" class="popup__close-button popup__close-button_type_add-card-close"></button>
+        <h3 class="popup__title">Новое место</h3>
+        <form class="popup__form popup_type_add-card-form">
+          <input type="text" name="title" placeholder="Название" class="popup__form-text popup__form-text_type_title">
+          <input type="text" name="link" placeholder="Ссылка на картинку" class="popup__form-text popup__form-text_type_link">
+          <input type="submit" value="Создать" class="popup__form-submit">
+        </form>
+      </div>
+    </section>
+    <section class="popup popup_type_full-image">
+      <div class="popup__container popup__container_type_full-image">
+      	<img class="popup__full-image" alt="иллюстрация пейзажа">
+        <button type="button" class="popup__close-button popup__close-button_type_full-image-close"></button>
+        <h3 class="popup__title popup__title_type_full-image"></h3>
+      </div>
+    </section>
   </div>
+
+  <template id="element-template">
+      <div class="element"> 
+        <img alt="иллюстрация пейзажа" class="element__image">
+        <div class="element__info">
+          <h4 class="element__title"></h4>
+          <button type="button" class="element__button-like"></button>
+        </div>
+        <button type="button" class="element__remove_image"></button>
+      </div>
+    </template>
+
   <script src="scripts/script.js"></script>
 </body>
 </html>
