--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
-    <section class="popup">
+    <section class="popup popup_type_edit-profile">
       <div class="popup__container">
         <button type="button" class="popup__close-button"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
@@ -43,7 +43,7 @@
     </section>
     <section class="popup popup_type_add-card">
       <div class="popup__container">
-        <button type="button" class="popup__close-button popup__close-button_type_add-card-close"></button>
+        <button type="button" class="popup__close-button"></button>
         <h3 class="popup__title">Новое место</h3>
         <form class="popup__form popup_type_add-card-form">
           <input type="text" name="title" placeholder="Название" class="popup__form-text popup__form-text_type_title">
@@ -55,7 +55,7 @@
     <section class="popup popup_type_full-image">
       <div class="popup__container popup__container_type_full-image">
       	<img class="popup__full-image" alt="иллюстрация пейзажа">
-        <button type="button" class="popup__close-button popup__close-button_type_full-image-close"></button>
+        <button type="button" class="popup__close-button"></button>
         <h3 class="popup__title popup__title_type_full-image"></h3>
       </div>
     </section>
