--- a/index.html
+++ b/index.html
@@ -1,77 +1,86 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="pages/index.css">
-  <title>Mesto Russia</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="pages/index.css">
+	<title>Mesto Russia</title>
 </head>
 <body class="body">
-  <div class="page">
-    <header class="header">
-      <div class="header__logo">
+	<div class="page">
+		<header class="header">
+			<div class="header__logo">
 
-      </div>
-    </header>
-    <main>
-    <section class="profile">
-      <img src="images/zhak-iv_kusto.png" alt="портрет человека" class="profile__avatar">
-      <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
-        <button type="button" class="profile__edit-button"></button>
-        <p class="profile__subtitle">Исследователь океана</p>
-      </div>
-      <button type="button" class="profile__button"></button>
-    </section>
-    <section class="elements">
-      
-    </section>
-    </main>
-    <footer class="footer">
-      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
-    </footer>
-    <section class="popup popup_type_edit-profile">
-      <div class="popup__container">
-        <button type="button" class="popup__close-button"></button>
-        <h3 class="popup__title">Редактировать профиль</h3>
-        <form class="popup__form">
-          <input type="text" name="name" value="Жак-Ив Кусто" class="popup__form-text popup__form-text_type_name">
-          <input type="text" name="job" value="Исследователь океана" class="popup__form-text popup__form-text_type_job">
-          <input type="submit" value="Сохранить" class="popup__form-submit">
-        </form>
-      </div>
-    </section>
-    <section class="popup popup_type_add-card">
-      <div class="popup__container">
-        <button type="button" class="popup__close-button"></button>
-        <h3 class="popup__title">Новое место</h3>
-        <form class="popup__form popup_type_add-card-form">
-          <input type="text" name="title" placeholder="Название" class="popup__form-text popup__form-text_type_title">
-          <input type="text" name="link" placeholder="Ссылка на картинку" class="popup__form-text popup__form-text_type_link">
-          <input type="submit" value="Создать" class="popup__form-submit">
-        </form>
-      </div>
-    </section>
-    <section class="popup popup_type_full-image">
-      <div class="popup__container popup__container_type_full-image">
-      	<img class="popup__full-image" alt="иллюстрация пейзажа">
-        <button type="button" class="popup__close-button"></button>
-        <h3 class="popup__title popup__title_type_full-image"></h3>
-      </div>
-    </section>
-  </div>
+			</div>
+		</header>
+		<main>
+			<section class="profile">
+				<img src="images/zhak-iv_kusto.png" alt="портрет человека" class="profile__avatar">
+				<div class="profile__info">
+					<h1 class="profile__title">Жак-Ив Кусто</h1>
+					<button type="button" class="profile__edit-button"></button>
+					<p class="profile__subtitle">Исследователь океана</p>
+				</div>
+				<button type="button" class="profile__button"></button>
+			</section>
+			<section class="elements">
 
-  <template id="element-template">
-      <div class="element"> 
-        <img alt="иллюстрация пейзажа" class="element__image">
-        <div class="element__info">
-          <h4 class="element__title"></h4>
-          <button type="button" class="element__button-like"></button>
-        </div>
-        <button type="button" class="element__remove_image"></button>
-      </div>
-    </template>
+			</section>
+		</main>
+		<footer class="footer">
+			<p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+		</footer>
+		<section class="popup popup_type_edit-profile">
+			<div class="popup__container">
+				<button type="button" class="popup__close-button"></button>
+				<h3 class="popup__title">Редактировать профиль</h3>
+				<form class="popup__form" novalidate>
+					<fieldset class="popup__form-set">
+						<input type="text" name="name" value="Жак-Ив Кусто" class="popup__form-text popup__form-text_type_name" id='name-input' minlength="2" maxlength="40" autocomplete="off" required >
+						<span class='popup__form-text-error' id='name-input-error'></span>
+						<input type="text" name="job" value="Исследователь океана" class="popup__form-text popup__form-text_type_job" id='job-input' minlength="2" maxlength="200" autocomplete="off" required>
+						<span class='popup__form-text-error' id='job-input-error'></span>
+						<input type="submit" value="Сохранить" class="popup__form-submit">
+					</fieldset>
+				</form>
+			</div>
+		</section>
+		<section class="popup popup_type_add-card">
+			<div class="popup__container">
+				<button type="button" class="popup__close-button"></button>
+				<h3 class="popup__title">Новое место</h3>
+				<form class="popup__form popup_type_add-card-form" novalidate>
+					<fieldset class="popup__form-set">
+						<input type="text" name="title" placeholder="Название" class="popup__form-text popup__form-text_type_title" id='title-input' minlength="1" maxlength="30" autocomplete="off" required>
+						<span class='popup__form-text-error' id='title-input-error'></span>
+						<input type="url" name="link" placeholder="Ссылка на картинку" class="popup__form-text popup__form-text_type_link" id='url-input' autocomplete="off" required>
+						<span class='popup__form-text-error' id='url-input-error'></span>
+						<input type="submit" value="Создать" class="popup__form-submit">
+					</fieldset>
+				</form>
+			</div>
+		</section>
+		<section class="popup popup_type_full-image">
+			<div class="popup__container popup__container_type_full-image">
+				<img class="popup__full-image" alt="иллюстрация пейзажа">
+				<button type="button" class="popup__close-button"></button>
+				<h3 class="popup__title popup__title_type_full-image"></h3>
+			</div>
+		</section>
+	</div>
 
-  <script src="scripts/script.js"></script>
+	<template id="element-template">
+		<div class="element"> 
+			<img alt="иллюстрация пейзажа" class="element__image">
+			<div class="element__info">
+				<h4 class="element__title"></h4>
+				<button type="button" class="element__button-like"></button>
+			</div>
+			<button type="button" class="element__remove_image"></button>
+		</div>
+	</template>
+
+	<script src="scripts/script.js"></script>
+	<script src="scripts/validate.js"></script>
 </body>
 </html>
