--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="popup__container">
 				<button type="button" class="popup__close-button"></button>
 				<h3 class="popup__title">Редактировать профиль</h3>
-				<form class="popup__form" novalidate>
+				<form class="popup__form popup_type_edit-profile-form" novalidate>
 					<fieldset class="popup__form-set">
 						<input type="text" name="name" value="Жак-Ив Кусто" class="popup__form-text popup__form-text_type_name" id='name-input' minlength="2" maxlength="40" autocomplete="off" required >
 						<span class='popup__form-text-error' id='name-input-error'></span>
@@ -80,7 +80,8 @@
 		</div>
 	</template>
 
-	<script src="scripts/script.js"></script>
-	<script src="scripts/validate.js"></script>
+	<script type="module" src="scripts/index.js"></script>
+	<script type="module" src="scripts/Card.js"></script>
+	<script type="module" src="scripts/FormValidator.js"></script>
 </body>
 </html>
