--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="pages/index.css">
+	
 	<title>Mesto Russia</title>
 </head>
+
 <body class="body">
 	<div class="page">
 		<header class="header">
@@ -36,9 +38,13 @@
 				<h3 class="popup__title">Редактировать профиль</h3>
 				<form class="popup__form popup_type_edit-profile-form" novalidate>
 					<fieldset class="popup__form-set">
-						<input type="text" name="name" value="Жак-Ив Кусто" class="popup__form-text popup__form-text_type_name" id='name-input' minlength="2" maxlength="40" autocomplete="off" required >
+						<input type="text" name="name" value="Жак-Ив Кусто"
+							class="popup__form-text popup__form-text_type_name" id='name-input' minlength="2"
+							maxlength="40" autocomplete="off" required>
 						<span class='popup__form-text-error' id='name-input-error'></span>
-						<input type="text" name="job" value="Исследователь океана" class="popup__form-text popup__form-text_type_job" id='job-input' minlength="2" maxlength="200" autocomplete="off" required>
+						<input type="text" name="job" value="Исследователь океана"
+							class="popup__form-text popup__form-text_type_job" id='job-input' minlength="2"
+							maxlength="200" autocomplete="off" required>
 						<span class='popup__form-text-error' id='job-input-error'></span>
 						<input type="submit" value="Сохранить" class="popup__form-submit">
 					</fieldset>
@@ -51,11 +57,16 @@
 				<h3 class="popup__title">Новое место</h3>
 				<form class="popup__form popup_type_add-card-form" novalidate>
 					<fieldset class="popup__form-set">
-						<input type="text" name="title" placeholder="Название" class="popup__form-text popup__form-text_type_title" id='title-input' minlength="1" maxlength="30" autocomplete="off" required>
+						<input type="text" name="title" placeholder="Название"
+							class="popup__form-text popup__form-text_type_title" id='title-input' minlength="1"
+							maxlength="30" autocomplete="off" required>
 						<span class='popup__form-text-error' id='title-input-error'></span>
-						<input type="url" name="link" placeholder="Ссылка на картинку" class="popup__form-text popup__form-text_type_link" id='url-input' autocomplete="off" required>
+						<input type="url" name="link" placeholder="Ссылка на картинку"
+							class="popup__form-text popup__form-text_type_link" id='url-input' autocomplete="off"
+							required>
 						<span class='popup__form-text-error' id='url-input-error'></span>
-						<input type="submit" value="Создать" class="popup__form-submit popup__form-submit_type_add-card">
+						<input type="submit" value="Создать"
+							class="popup__form-submit popup__form-submit_type_add-card">
 					</fieldset>
 				</form>
 			</div>
@@ -70,7 +81,7 @@
 	</div>
 
 	<template id="element-template">
-		<div class="element"> 
+		<div class="element">
 			<img class="element__image">
 			<div class="element__info">
 				<h4 class="element__title"></h4>
@@ -80,6 +91,6 @@
 		</div>
 	</template>
 
-	<script type="module" src="scripts/index.js"></script>
 </body>
+
 </html>
